test/sema/typeck/trait/default-method-with-assoc-type-constructor.dora
trait Foo {
    type T;
    fn make(): Self::T {
        Self::T()
    }
}
